--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Changjun Li"
-  avatar           : "images/头像.jpg"
+  avatar           : "images/HeadPhoto.png"
   bio              : "Chongqing University of Posts and Telecommunications"
   location         : "Chongqing, China"
   employer         :
